# solanaceae_zox

./: CMakeLists.txt  LICENSE  README.md
plugins/: CMakeLists.txt  plugin_zox_ngc_hs.cpp
solanaceae/zox/: ngc.cpp  ngc.hpp  ngc_hs.cpp  ngc_hs.hpp
src/: CMakeLists.txt
src/solanaceae/zox/: ngc.cpp  ngc.hpp  ngc_hs.cpp  ngc_hs.hpp
